# gummy_snake

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: benchmark-record.yml  ci.yml  publish.yml
assets/fx/: README.md
assets/synths/: README.md
backlog/03_rendering_2d/: hidpi_pixel_density.toml  interactive_backend.toml  paths_and_curves.toml
backlog/061_native_pyglet_assets_text_export/: docs_examples_capabilities.toml  native_image_drawing.toml  native_save_canvas_pixels.toml  native_text_fonts.toml  renderer_capability_cleanup.toml
backlog/062_transformed_image_rendering/: image_transform_semantics.toml
benchmarks/: README.md  __init__.py  canvas_v1.toml  cli.py  ecs_v1.toml  synth_v1.toml
benchmarks/coverage/: __init__.py  canvas_v1.json  (+3 more)
crates/gummy_canvas/: Cargo.toml  pyproject.toml
crates/gummy_canvas/src/: assets.rs  bindings.rs  canvas_cache_text.rs  canvas_curves.rs  canvas_gpu_paths.rs  canvas_image_helpers.rs  canvas_images.rs  canvas_lifecycle.rs  canvas_methods.rs  canvas_pixels.rs  canvas_primitives.rs  canvas_state.rs  canvas_text.rs  config.rs  frame_commands.rs  gpu.rs  image_ops.rs  images.rs  lib.rs  media.rs  performance.rs  prelude.rs  raster.rs  runtime.rs  runtime_style.rs  sketch_state.rs  software3d.rs  sound.rs  tests.rs  text.rs  types.rs
crates/gummy_canvas/src/bindings/: ecs.rs  health.rs  image_ops.rs  models.rs  synth.rs
crates/gummy_canvas/src/bindings/ecs/: canvas_replay.rs  diagnostics.rs  events.rs  parse.rs  spatial_registry.rs  summaries.rs  values.rs  world.rs
crates/gummy_canvas/src/bindings/models/: input.rs  payload.rs  projection.rs  uniforms.rs
crates/gummy_canvas/src/canvas/: cache.rs  curves.rs  dirty.rs  frame_commands.rs  gpu.rs  lifecycle.rs  methods.rs  mod.rs  pixels.rs  primitives.rs  state.rs
crates/gummy_canvas/src/canvas/gpu/: commands.rs  replay.rs  shapes.rs  sync.rs
crates/gummy_canvas/src/canvas/gpu/shapes/: instances.rs  paths.rs  primitives.rs  records.rs  tests.rs
crates/gummy_canvas/src/canvas/images/: atlas.rs  batch.rs  cached.rs  canvas_image.rs  helpers.rs  mod.rs  records.rs
crates/gummy_canvas/src/canvas/lifecycle/: capabilities.rs  construction.rs  frames.rs  window.rs
crates/gummy_canvas/src/canvas/pixels/: effects.rs  export.rs  load.rs  update.rs
crates/gummy_canvas/src/canvas/primitives/: batches.rs  clip.rs  lines.rs  models.rs  packed.rs  polygons.rs  rects.rs  shapes.rs  surface.rs  typed_paths.rs
crates/gummy_canvas/src/canvas/primitives/batches/: fill.rs  helpers.rs
crates/gummy_canvas/src/canvas/text/: batch.rs  cache.rs  draw.rs  layout.rs  metrics.rs  mod.rs  packed.rs
crates/gummy_canvas/src/gpu/: context.rs  mod.rs  pipeline.rs  render.rs  renderer_state.rs  resources.rs  setup.rs  shaders.rs  surface.rs  tests.rs  textures.rs  types.rs
crates/gummy_canvas/src/gpu/pipeline/: common.rs  effects.rs  images.rs  layouts.rs  models.rs  presentation.rs  primitives.rs  surface_config.rs
crates/gummy_canvas/src/gpu/render/: batcher.rs  batcher_images.rs  batcher_models.rs  batcher_primitives.rs  buffers.rs  commands.rs  effects.rs  encoder.rs  plain.rs  readback.rs  staging.rs  state.rs  text.rs
crates/gummy_canvas/src/gpu/render/batching/: batcher.rs  batcher_images.rs  batcher_models.rs  batcher_primitives.rs  mod.rs
crates/gummy_canvas/src/gpu/setup/: init.rs  pipelines.rs  resize.rs  resources.rs
crates/gummy_canvas/src/gpu/shaders/: effects.rs  image.rs  model.rs  present.rs  primitive.rs
crates/gummy_canvas/src/gpu/shaders/primitive/: path_fill.rs  procedural.rs  stroke.rs  triangle.rs
crates/gummy_canvas/src/gpu/types/: draw_command.rs
crates/gummy_canvas/src/raster/: blend.rs  blit.rs  gpu.rs  gpu_bridge.rs  mod.rs  queries.rs  shapes.rs  transform.rs  types.rs
crates/gummy_canvas/src/runtime/: app.rs  app_handler.rs  desktop.rs  event.rs  input.rs  mod.rs  stub.rs  style.rs
crates/gummy_canvas/src/runtime/app/: handler.rs
crates/gummy_canvas/src/runtime/desktop/: events.rs  input.rs
crates/gummy_canvas/src/sketch_state/: canvas.rs  input.rs  methods.rs  shape.rs
crates/gummy_canvas/src/software3d/: gpu.rs  lighting.rs  math.rs  mesh.rs  mod.rs  model.rs  model_factory.rs  obj.rs  obj_export.rs  obj_parse.rs  payload.rs  primitive_lathe.rs  primitive_spherical.rs  primitive_utils.rs  primitives.rs  project.rs  py_faces.rs  rasterize.rs  triangles.rs  types.rs
crates/gummy_canvas/src/software3d/model/: factory.rs  handle.rs  mesh.rs  mod.rs  types.rs
crates/gummy_canvas/src/software3d/primitive/: lathe.rs  mod.rs  spherical.rs  utils.rs
crates/gummy_canvas/src/software3d/render/: gpu.rs  lighting.rs  math.rs  mod.rs  project.rs  rasterize.rs
crates/gummy_canvas/src/sound/: audio_manager.rs  live.rs  wav.rs
crates/gummy_canvas/src/tests/: cache.rs  canvas_core.rs  clip_runtime.rs  gpu_basic.rs  gpu_blend.rs  gpu_erase.rs
crates/p5_canvas/: Cargo.toml  pyproject.toml
crates/p5_canvas/src/: gpu.rs  lib.rs  runtime.rs
docs/: README.md  advanced_3d_media_strategy.md  hidpi_rendering.md  native_pyglet_renderer.md  project_plan.md
examples/: README.md  __init__.py  accelerated_noise_pixels.py  asteroids.py  audio_controls.py  basic_shapes.py  bouncing_ball.py  color_style_filters.py  common.py  custom_shape.py  example_catalog.toml  image_flip_sampling.py  image_text_data.py  pixels_blend_export.py  plugin_hooks.py  pyglet_image_benchmark.py  reference_completion.py  simple_platformer.py  transforms.py  vector_noise_flow.py  video_capture.py  video_playback.py  webgl_native_shader.py  webgl_obj_sound.py  webgl_primitives_gallery.py  webgl_texture_orbit.py  webgl_wireframe_prototype.py
scripts/: benchmark.py  bump_version.py  compile_synth_assets.py  example_smoke.py  impact_map_audit.py  package_acceleration_wheel.py  source_size_audit.py  static_analysis_audit.py  structure_audit.py  verify_distribution.py
tests/: conftest.py
tests/fixtures/rust/downstream_runtime_api/: Cargo.toml
tests/fixtures/rust/downstream_runtime_api/src/: lib.rs
(+1729 files in other folders)
