[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "gummy-snake"
version = "0.8.0"
description = "A playful Python toolkit for creative coding and small games."
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-2.1-only"
license-files = ["license.txt", "LICENSE*"]
keywords = ["creative-coding", "games", "graphics", "python", "sketches"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
dependencies = []

[project.optional-dependencies]
numpy = [
    "numpy>=2.4.6",
]
media = [
    "opencv-python-headless>=4.13.0.92",
]

[dependency-groups]
dev = [
    "numpy>=2.4.6",
    "mypy>=1.18.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
release = [
    "maturin>=1.9.4",
]

[tool.maturin]
manifest-path = "crates/gummy_canvas/Cargo.toml"
module-name = "gummysnake.rust._canvas"
python-source = "src"
bindings = "pyo3"
features = ["extension-module"]
include = [
    "assets/samples/sonic_pi/*.flac",
    "assets/samples/sonic_pi/README.md",
    "assets/synths/README.md",
    "assets/synths/compiled/*.gss",
    "assets/fx/README.md",
    "assets/fx/compiled/*.gsfx",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "benchmark: opt-in runtime performance benchmarks",
    "high_count_benchmark: opt-in high-count primitive benchmark gates",
    "stress: opt-in long-running resource lifecycle stress tests",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
exclude = [
    "src/gummysnake/api/three_d_api",
    "src/gummysnake/assets/audio_runtime",
    "src/gummysnake/assets/media/stream_sources",
    "src/gummysnake/assets/sound_runtime",
    "src/gummysnake/context_mixins/three_d/camera_runtime",
    "src/gummysnake/core/input_event_model",
    "src/gummysnake/drawing/renderer3d/mesh_model",
    "src/gummysnake/ecs/action_tools/plan_building",
    "src/gummysnake/ecs/action_model",
    "src/gummysnake/ecs/runtime_view_model",
    "src/gummysnake/ecs/spatial/relation_model",
    "src/gummysnake/ecs/system_model",
    "src/gummysnake/ecs/world_facade",
    "src/gummysnake/ecs/world_runtime/physical_execution",
    "src/gummysnake/fast_draw_runtime",
    "src/gummysnake/sketch/facade_mixins/three_d_facade",
    "src/gummysnake/synth/synth_runtime",
]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.basedpyright]
include = ["src"]
exclude = [
    "src/gummysnake/api/three_d_api",
    "src/gummysnake/assets/audio_runtime",
    "src/gummysnake/assets/media/stream_sources",
    "src/gummysnake/assets/sound_runtime",
    "src/gummysnake/context_mixins/three_d/camera_runtime",
    "src/gummysnake/core/input_event_model",
    "src/gummysnake/drawing/renderer3d/mesh_model",
    "src/gummysnake/ecs/action_tools/plan_building",
    "src/gummysnake/ecs/action_model",
    "src/gummysnake/ecs/runtime_view_model",
    "src/gummysnake/ecs/spatial/relation_model",
    "src/gummysnake/ecs/system_model",
    "src/gummysnake/ecs/world_facade",
    "src/gummysnake/ecs/world_runtime/physical_execution",
    "src/gummysnake/fast_draw_runtime",
    "src/gummysnake/sketch/facade_mixins/three_d_facade",
    "src/gummysnake/synth/synth_runtime",
]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/gummysnake/__init__.py" = ["F401", "I001"]
"src/gummysnake/api/global_mode/__init__.py" = ["A001", "F401", "F403", "F405"]
"src/gummysnake/api/three_d_api/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/assets/audio_runtime/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/assets/media/stream_sources/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/assets/sound_runtime/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/context_mixins/three_d/camera_runtime/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/core/input_event_model/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/drawing/renderer3d/mesh_model/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/ecs/action_tools/plan_building/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/ecs/action_model/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/ecs/runtime_view_model/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/ecs/spatial/relation_model/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/ecs/system_model/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/ecs/world_facade/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/ecs/world_runtime/physical_execution/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/fast_draw_runtime/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/sketch/facade_mixins/three_d_facade/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"src/gummysnake/synth/synth_runtime/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"tests/unit/test_ecs_*.py" = ["F403", "F405"]
"tests/unit/test_synth_tracks_*.py" = ["F403", "F405"]
"examples/**/ant_colony_runtime/*.py" = ["F401", "F811", "F821", "F822", "I001"]
"tests/**/ant_colony_benchmark_support/*.py" = ["F401", "F811", "F821", "F822", "I001"]


[tool.uv]
default-groups = ["dev"]
