[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "gummy-snake"
version = "0.8.0"
description = "A playful Python toolkit for creative coding and small games."
readme = "README.md"
requires-python = ">=3.12"
license = "LGPL-2.1-only"
license-files = ["license.txt", "LICENSE*"]
keywords = ["creative-coding", "games", "graphics", "python", "sketches"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
dependencies = []

[project.optional-dependencies]
numpy = [
    "numpy>=2.4.6",
]
media = [
    "opencv-python-headless>=4.13.0.92",
]

[dependency-groups]
dev = [
    "numpy>=2.4.6",
    "mypy>=1.18.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "basedpyright>=1.39.9",
]
release = [
    "maturin>=1.9.4",
]

[tool.maturin]
manifest-path = "crates/gummy_canvas/Cargo.toml"
module-name = "gummysnake.rust._canvas"
python-source = "src"
bindings = "pyo3"
features = ["extension-module"]
include = [
    ".cargo/config.toml",
    "assets/samples/sonic_pi/*.flac",
    "assets/samples/sonic_pi/README.md",
    "assets/synths/README.md",
    "assets/synths/compiled/*.gss",
    "assets/fx/README.md",
    "assets/fx/compiled/*.gsfx",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "stress: opt-in long-running resource lifecycle stress tests",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]

ignore_missing_imports = true
warn_unused_ignores = true

[tool.basedpyright]
include = [
    "src",
    "benchmarks",
    "tests/unit/benchmark_system",
    "examples/09_performance/ant_colony_runtime",
    "examples/09_performance/ants_2d.py",
    "examples/11_temporary_perf_tests",
    "examples/support/ant_colony",
]

extraPaths = [".", "src"]

typeCheckingMode = "standard"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]



[tool.uv]
default-groups = ["dev"]
