[package]
name = "gummy_canvas"
version = "0.8.0"
edition = "2021"
publish = false

[lib]
name = "_canvas"
crate-type = ["cdylib", "rlib"]

[dependencies]
ab_glyph = "0.2.32"
bytemuck = { version = "1.25.0", features = ["derive"] }
glyphon = "0.9.0"
gummy_ecs = { path = "../gummy_ecs" }
image = { version = "0.25.8", default-features = false, features = ["gif", "png"] }
pollster = "0.4.0"
pyo3 = "0.22.6"
sdl3 = { version = "0.18.4", features = ["build-from-source-static", "raw-window-handle"] }
wgpu = "25.0.2"

[features]
default = []
extension-module = ["pyo3/extension-module"]
