[package]
name = "gummy_canvas"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "_canvas"
crate-type = ["cdylib", "rlib"]

[dependencies]
ab_glyph = "0.2.32"
bytemuck = { version = "1.25.0", features = ["derive"] }
glyphon = "0.9.0"
gummy_ecs = { path = "../gummy_ecs" }
gummy_synth = { path = "../gummy_synth" }
image = { version = "0.25.8", default-features = false, features = ["gif", "png"] }
pollster = "0.4.0"
pyo3 = { workspace = true }
sdl3 = { version = "0.18.4", features = ["build-from-source-static", "raw-window-handle"] }
wgpu = "25.0.2"

[features]
default = []
extension-module = ["pyo3/extension-module"]
